# OS-project

./: CMakeLists.txt  MST.cpp  MST.h  Makefile
include/: Factory.hpp  commands.hpp
include/ActObj/: Servant.hpp
include/Factory/: AbstractFactory.hpp  AbstractProduct.hpp
include/active_object/: ActivationQ.hpp  Future.hpp  MSTPipeline.hpp  MSTProxy.hpp  MSTServant.hpp  MethodRequest.hpp  Proxy.hpp  Scheduler.hpp
include/dsa/: AbstractProductAlgo.hpp  ConcreteAlgoFactory.hpp  ConcreteAlgoKruskal.hpp  ConcreteAlgoPrim.hpp  Graph.hpp  MST.hpp  UnionFind.hpp
include/factory/: AbstractFactory.hpp  AbstractProduct.hpp  AbstractProductAlgo.hpp  ConcreteAlgoFactory.hpp
include/leader_followers/: AcceptHandler.hpp  CommandHandler.hpp  ConcreteEventHandler.hpp  EventHandler.hpp  Handle.hpp  HandleSet.hpp  LFThreadPool.hpp  Reactor.hpp  ThreadPool.hpp  ThreadSynchronizer.hpp
include/server/: MSTLeaderFollowersServer.hpp  MSTPipelineServer.hpp  MSTServer.hpp  Server.hpp  server.hpp
src/: Factory.cpp
src/active_object/: ActivationQ.cpp  MSTPipeline.cpp  MSTProxy.cpp  MSTServant.cpp  Scheduler.cpp
src/dsa/: ConcreteAlgoFactory.cpp  ConcreteAlgoKruskal.cpp  ConcreteAlgoPrim.cpp  Graph.cpp  MST.cpp  UnionFind.cpp
src/factory/: AbstractProduct.cpp
src/leader_followers/: AcceptHandler.cpp  CommandHandler.cpp  Handle.cpp  HandleSet.cpp  LFThreadPool.cpp  Reactor.cpp  ThreadPool.cpp  ThreadSynchronizer.cpp
src/server/: MSTLeaderFollowersServer.cpp  MSTPipelineServer.cpp  MSTServer.cpp  MSTServerLF.cpp  MSTServerPipeline.cpp  server.cpp
tests/dsa/: Factory_Algo_test.cpp  Graph_test.cpp  MST_test.cpp
